Fix displacement in image index page when on mobile.

--- a/src/styles/_general.sass
+++ b/src/styles/_general.sass
@@ -140,6 +140,9 @@ hr
   @media screen and (max-width: 1200px)
     border-radius: 0
 
+  @media screen and (max-width: 505px)
+    margin-top: 0
+
   .inner-main-content
     max-width: 630px
     width: 100%
