--- a/src/styles/_hero.sass
+++ b/src/styles/_hero.sass
@@ -2,16 +2,13 @@
   
 .main-hero
   background-color: darken($primary-color, 10%)
+  background-image: $linear-gradient
   color: $white
   padding: 2rem 2rem 0
   height: 90vh
   max-height: 585px
   display: flex
   align-items: flex-end
-  background-image: $linear-gradient
-  background-position: center top
-  background-size: cover
-  background-repeat: no-repeat
   z-index: 1
 
   @media screen and ( max-width: 1015px )
